added matomo image link as a test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <%= yield %>
   </div>
   <%= render 'layouts/footer'%>
+  <!-- Matomo Image Tracker-->
+<img src="https://hellorubygeo.matomo.cloud/matomo.php?idsite=1&amp;rec=1" style="border:0" alt="" />
+<!-- End Matomo -->
 <%= piwik_tracking_tag %>
 </body>
 </html>
