--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -21,13 +21,20 @@
       
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href="#">Link</a></li>-->
+        <script>
+        console.log("Drawing navigation");
+        </script>
         <li><%= link_to 'Sign Up', new_user_registration_path%></li>
         <li><%= link_to 'Sign In', new_user_session_path%></li>
         <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete%></li>
+        <button><a id="changeme" onclick="myFunction()">changeText</a></button>
+        <!--<button><a href="#" onclick="javascript:_paq.push(['trackEvent', 'Documentary', 'Play', 'Thrive']);"> clickme </a></button>-->
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
+            <!--<li><a href="#">Action</a></li>-->
+            <li><a href="#">Action 1</a></li>
+            
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
